Fix URL generation for GitHub Pages subpath
Set canonifyURLs=true to ensure all URLs are absolute based on baseURL.
This fixes 404 errors when clicking links on GitHub Pages deployment.

--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 baseURL = "/"
 languageCode = "en-us"
 title = "EETHAL Foundation"
-relativeURLs = true
-canonifyURLs = false
+relativeURLs = false
+canonifyURLs = true
 # No theme - using custom layouts
 
 # Pagination
